# AgentLabILD

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run.py
.github/: copilot-instructions.md
assets/: case_schema.json
docs/: architecture.md  config_reference.md  devlog.md  getting_started.md
scripts/: test_case_analyst.py
src/: __init__.py  runner.py
src/llm/: cache.py  (+8 more)
teach/: add_case_analyst_agent.md  phase1_1_action_candidate_schema_2026_04_23.md  phase1_1_claim_reference_schema_2026_04_23.md  phase1_1_direction_a_validation_refinement_2026_04_23.md  phase1_1_evidence_atom_schema_2026_04_22.md  phase1_1_evidence_atom_semantic_refinement_2026_04_22.md  phase1_1_hypothesis_board_init_schema_2026_04_23.md  phase1_1_hypothesis_state_schema_2026_04_23.md  phase1_1_state_envelope_validation_report_2026_04_23.md  phase1_1_structural_closure_refinement_2026_04_23.md  phase1_2_evidence_provenance_authority_rule_2026_04_23.md  phase1_2_provenance_checker_structural_split_2026_04_23.md  phase1_2_provenance_checking_2026_04_23.md  phase1_2_provenance_package_2026_04_23.md  phase1_3_schema_temporal_validators_2026_04_27.md  phase1_3_schema_validator_mutation_hardening_2026_04_27.md  phase1_3_state_writer_gate_2026_04_27.md  phase1_3_unsupported_claim_validator_2026_04_27.md  phase1_3_validation_pipeline_2026_04_27.md  phase1_3_validator_hardening_2026_04_27.md  phase1_3_write_gate_contract_layer_2026_04_23.md  phase1_3_write_gate_semantic_tightening_2026_04_27.md  phase1_4_adapter_contracts_2026_04_27.md  phase1_4_case_structurer_adapter_2026_04_27.md  (+14 more)
(+183 files in other folders)
